--- a/package.json
+++ b/package.json
@@ -23,17 +23,16 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@babel/core": "7.0.0-rc.2",
-    "@babel/plugin-proposal-class-properties": "7.0.0-rc.2",
-    "@babel/plugin-proposal-object-rest-spread": "7.0.0-rc.2",
-    "@babel/plugin-syntax-object-rest-spread": "7.0.0-rc.2",
-    "@babel/plugin-transform-react-jsx": "7.0.0-rc.2",
-    "@babel/preset-env": "7.0.0-rc.2",
-    "esm": "^3.0.79",
+    "@babel/core": "7.0.0",
+    "@babel/plugin-proposal-class-properties": "7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0",
+    "@babel/plugin-syntax-object-rest-spread": "7.0.0",
+    "@babel/plugin-transform-react-jsx": "7.0.0",
+    "@babel/preset-env": "7.0.0",
     "lerna": "^3.1.2",
     "lodash": "4.17.10",
-    "rollup": "^0.64.1",
-    "rollup-plugin-babel": "4.0.0-beta.8",
+    "rollup": "^0.65.0",
+    "rollup-plugin-babel": "4.0.1",
     "rollup-plugin-node-resolve": "3.3.0",
     "rollup-plugin-terser": "1.0.1"
   },
