--- a/package.json
+++ b/package.json
@@ -23,18 +23,18 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@babel/core": "7.0.0",
-    "@babel/plugin-proposal-class-properties": "7.0.0",
-    "@babel/plugin-proposal-object-rest-spread": "7.0.0",
-    "@babel/plugin-syntax-object-rest-spread": "7.0.0",
-    "@babel/plugin-transform-react-jsx": "7.0.0",
-    "@babel/preset-env": "7.0.0",
-    "lerna": "^3.1.2",
-    "lodash": "4.17.10",
-    "rollup": "^0.65.0",
-    "rollup-plugin-babel": "4.0.1",
-    "rollup-plugin-node-resolve": "3.3.0",
-    "rollup-plugin-terser": "1.0.1"
+    "@babel/core": "~7.0.0",
+    "@babel/plugin-proposal-class-properties": "~7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "~7.0.0",
+    "@babel/plugin-syntax-object-rest-spread": "~7.0.0",
+    "@babel/plugin-transform-react-jsx": "~7.0.0",
+    "@babel/preset-env": "~7.0.0",
+    "lerna": "~3.1.2",
+    "lodash": "~4.17.10",
+    "rollup": "~0.65.0",
+    "rollup-plugin-babel": "~4.0.1",
+    "rollup-plugin-node-resolve": "~3.3.0",
+    "rollup-plugin-terser": "~1.0.1"
   },
   "dependencies": {},
   "scripts": {
