--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -10,6 +10,7 @@
   "module": "dist/react.es.js",
   "es2015": "dist/react.es2015.js",
   "es2018": "dist/react.es2018.js",
+  "typings": "dist/index.d.ts",
   "directories": {
     "dist": "dist",
     "src": "src"
