--- a/package.json
+++ b/package.json
@@ -42,8 +42,9 @@
     "rollup-plugin-babel": "~4.0.3",
     "rollup-plugin-node-resolve": "~3.4.0",
     "rollup-plugin-terser": "~3.0.0",
+    "tslint": "~5.11.0",
     "typescript": "~3.1.6",
-    "utility-types": "^2.1.0"
+    "utility-types": "~2.1.0"
   },
   "dependencies": {},
   "scripts": {
@@ -53,7 +54,8 @@
     "bootstrap": "lerna bootstrap",
     "clean": "lerna exec -- rimraf dist",
     "rollup": "lerna exec --concurrency 2 -- rollup -c ./rollup.config.js",
-    "prepublishOnly": "npm run clean && npm run types && npm run rollup && npm run test"
+    "lint": "tslint -e \"node_modules/**\" -e \"packages/*/dist/**\" **/*.ts",
+    "prepublishOnly": "npm run lint && npm run clean && npm run types && npm run rollup && npm run test"
   },
   "engines": {
     "node": ">=8.10.0",
