--- a/package.json
+++ b/package.json
@@ -29,16 +29,16 @@
     "@babel/plugin-syntax-object-rest-spread": "~7.0.0",
     "@babel/plugin-transform-react-jsx": "~7.1.6",
     "@babel/preset-env": "~7.1.5",
-    "@babel/preset-typescript": "7.1.0",
+    "@babel/preset-typescript": "~7.1.0",
     "@types/jest": "~23.3.9",
-    "@types/node": "~10.12.7",
+    "@types/node": "~10.12.9",
     "babel-core": "~7.0.0-bridge.0",
     "babel-jest": "~23.6.0",
     "jest": "~23.6.0",
     "jest-circus": "~23.6.0",
     "lerna": "~3.4.3",
     "lodash": "~4.17.11",
-    "rollup": "~0.67.1",
+    "rollup": "~0.67.3",
     "rollup-plugin-babel": "~4.0.3",
     "rollup-plugin-node-resolve": "~3.4.0",
     "rollup-plugin-terser": "~3.0.0",
