Use rollup-plugin-typescript2 and ts-jest instead of babel-typescript and babel-jest, until Typescript allow to import types explicitly

--- a/tsconfig.compiler.json
+++ b/tsconfig.compiler.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "esnext",
-    "module": "commonjs",
+    "module": "esnext",
     "lib": ["esnext"],
     "noEmit": false,
     "noEmitOnError": true,
