--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "css-modules-theme",
-  "private": true,
   "author": "Pavel Klimashkin",
   "license": "MIT",
   "description": "Theme composition for CSS Modules",
@@ -23,28 +22,28 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@babel/core": "~7.2.0",
+    "@babel/core": "~7.2.2",
     "@babel/plugin-proposal-class-properties": "~7.2.1",
     "@babel/plugin-proposal-object-rest-spread": "~7.2.0",
     "@babel/plugin-syntax-object-rest-spread": "~7.2.0",
     "@babel/plugin-transform-react-jsx": "~7.2.0",
     "@babel/preset-env": "~7.2.0",
-    "@babel/preset-typescript": "~7.1.0",
     "@types/jest": "~23.3.10",
-    "@types/node": "~10.12.12",
+    "@types/node": "~10.12.15",
     "babel-core": "~7.0.0-bridge.0",
-    "babel-jest": "~23.6.0",
     "eslint": "5.10.0",
     "eslint-plugin-typescript": "0.14.0",
-    "husky": "1.2.0",
+    "husky": "1.2.1",
     "jest": "~23.6.0",
     "jest-circus": "~23.6.0",
     "lerna": "~3.6.0",
     "lodash": "~4.17.11",
-    "rollup": "~0.67.4",
-    "rollup-plugin-babel": "~4.0.3",
+    "rollup": "~0.68.0",
+    "rollup-plugin-babel": "~4.1.0",
     "rollup-plugin-node-resolve": "~4.0.0",
     "rollup-plugin-terser": "~3.0.0",
+    "rollup-plugin-typescript2": "0.18.1",
+    "ts-jest": "23.10.5",
     "typescript": "~3.2.2",
     "typescript-eslint-parser": "21.0.2",
     "utility-types": "~2.1.0"
