Update Babel 7.5.5, TypeScript 3.6.2 and ESLint 6.3.0 with @typescript-eslint 2.1.0

--- a/package.json
+++ b/package.json
@@ -22,32 +22,33 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@babel/core": "~7.2.2",
-    "@babel/plugin-proposal-class-properties": "~7.3.0",
-    "@babel/plugin-proposal-object-rest-spread": "~7.3.1",
+    "@babel/core": "~7.5.5",
+    "@babel/plugin-proposal-class-properties": "~7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "~7.5.5",
     "@babel/plugin-syntax-object-rest-spread": "~7.2.0",
     "@babel/plugin-transform-react-jsx": "~7.3.0",
-    "@babel/preset-env": "~7.3.1",
-    "@types/jest": "~23.3.13",
-    "@types/node": "~10.12.18",
-    "babel-core": "~7.0.0-bridge.0",
-    "eslint": "~5.12.1",
-    "eslint-plugin-typescript": "0.14.0",
+    "@babel/preset-env": "~7.5.5",
+    "@types/jest": "~24.0.18",
+    "@types/lodash": "~4.14.138",
+    "@types/node": "~12.7.3",
+    "@typescript-eslint/eslint-plugin": "~2.1.0",
+    "@typescript-eslint/parser": "~2.1.0",
+    "eslint": "~6.3.0",
     "esm": "~3.2.25",
-    "husky": "~3.0.4",
-    "jest": "~23.6.0",
-    "jest-circus": "~23.6.0",
-    "lerna": "~3.10.7",
-    "lodash": "~4.17.11",
+    "husky": "~3.0.5",
+    "jest": "~24.9.0",
+    "jest-circus": "~24.9.0",
+    "lerna": "~3.16.4",
+    "lodash": "~4.17.15",
     "rollup": "~0.68.1",
     "rollup-plugin-babel": "~4.1.0",
     "rollup-plugin-node-resolve": "~4.0.0",
     "rollup-plugin-terser": "~3.0.0",
     "rollup-plugin-typescript2": "~0.18.1",
-    "ts-jest": "~23.10.5",
-    "typescript": "~3.2.4",
+    "ts-jest": "~24.0.2",
+    "typescript": "~3.6.2",
     "typescript-eslint-parser": "~22.0.0",
-    "utility-types": "~3.4.1"
+    "utility-types": "~3.7.0"
   },
   "dependencies": {},
   "scripts": {
@@ -57,7 +58,7 @@
     "bootstrap": "lerna bootstrap",
     "clean": "lerna exec -- rimraf dist",
     "rollup": "lerna exec --concurrency 2 -- rollup -c ./rollup.config.js",
-    "lint": "eslint . --ext .js --ext .ts",
+    "lint": "eslint . --ext .js,.ts",
     "release": "npm run lint && npm run clean && npm run types && npm run rollup && npm run test",
     "prepublishOnly": "npm run test"
   },
