Add .tsbuildinfo from incremental build into .gitignore

--- a/tsconfig.compiler.json
+++ b/tsconfig.compiler.json
@@ -5,7 +5,10 @@
     "lib": ["esnext"],
     "noEmit": false,
     "noEmitOnError": true,
+
     "composite": true,
+    "incremental": true,
+
     "declaration": true,
     "declarationMap": true,
     "skipLibCheck": true,
