--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -43,6 +43,6 @@
     "react": "^15.0.0 || ^16.0.0"
   },
   "dependencies": {
-    "@css-modules-theme/core": "^2.1.3"
+    "@css-modules-theme/core": "~2.2.0"
   }
 }
