--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -40,7 +40,7 @@
     "url": "https://github.com/klimashkin/css-modules-theme/issues"
   },
   "peerDependencies": {
-    "react": "^15.0.0 || ^16.0.0"
+    "react": "^15.0.0 || ^16.0.0 || ^17.0.0"
   },
   "dependencies": {
     "@css-modules-theme/core": "~2.2.0"
